[package]
name = "bets-api-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["json"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.194", features = ["derive"] }
chrono = "0.4.31"